--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,10 @@
 //
 // The variables you want to modify
 // $font-size-root: 18px;
+
+$body-font-family: "Helvetica Neue",
+Arial,
+"Hiragino Kaku Gothic ProN",
+"Hiragino Sans",
+Meiryo,
+sans-serif;
