--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -6,6 +6,7 @@
 $body-font-family: "Helvetica Neue",
 Arial,
 "Hiragino Kaku Gothic ProN",
+'ヒラギノ角ゴ ProN W3',
 "Hiragino Sans",
 Meiryo,
 sans-serif;
