--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,12 +18,21 @@
   opacity: 0;
 }
 .page-leave-active {
-  transition: all .5s 0s ease-in;
+  transition: all 0.5s 0s ease-in;
 }
 
-.layout-enter, .layout-leave-active{
+.layout-enter,
+.layout-leave-active {
   opacity: 0;
 }
-.layout-enter-active, .layout-leave-active{
-  transition: opacity .4s;
+.layout-enter-active,
+.layout-leave-active {
+  transition: opacity 0.4s;
+}
+
+/* font-family 明朝体*/
+.f-f,
+h3 {
+  font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN",
+    "Yu Mincho", "MS PMincho", serif;
 }
