--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,10 +3,7 @@
 // The variables you want to modify
 // $font-size-root: 18px;
 
-$body-font-family: "Helvetica Neue",
-Arial,
-"Hiragino Kaku Gothic ProN",
-'ヒラギノ角ゴ ProN W3',
-"Hiragino Sans",
-Meiryo,
-sans-serif;
+$body-font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans",
+  "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+// 明朝体
+// font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
