--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,8 +31,7 @@
 }
 
 /* font-family 明朝体*/
-.f-f,
-h3 {
+.f-f {
   font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN",
     "Yu Mincho", "MS PMincho", serif;
 }
